--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -1,41 +1,29 @@
-body {
+html{
     font-family: "Geologica", sans-serif;
 }
-
-.container{
-    background-image: url("../Material/pexels-misael-garcia-1707823.jpg");  
-    background-repeat: no-repeat;  
-    background-size: cover;
-    width: 100%;   
-    color:#fff;
-    padding: 30px;
-}
-
 .head{
-    display: flex ;
-    text-decoration: none;
-    color: #fff;
-    cursor: pointer;
+    padding: 8px;
+    display: flex;
+    background-color: gray;
 }
-
-ul {
+.head ul{
+    padding-top: 10px;
     flex: 1;
     text-align: right;
     padding-right: 10px;
-}
-ul li{
+ }
+.head ul li{
     display: inline-block;
     list-style: none;
     margin: 5px 30px;
-}
-
-ul li a{
+ }
+.head ul li a{
     text-decoration: none;
     color: #fff;
     position: relative;
-}
-ul li a::after{
-    content: "";
+ }
+.head ul li a::after{
+    content: "";    
     width: 0%;
     height: 3px;
     position: absolute;
@@ -43,24 +31,7 @@ ul li a::after{
     left: 25%;
     background-color: #fff;
     transition: width 0.3s;
-}
-ul li a:hover::after{
+ }
+.head ul li a:hover::after{
     width: 50%;
-}
-.icon {
-   position: absolute;
-   right: 5%;
-   bottom: 20%;
-}
-.icon img{
-    width: 50px;
-    display: inline-block;
-    margin: 10px 5px;
-}
-.home{
-    margin-top: 20%;
-}
-.home-1 img{
-    width: 400px;
-    height: 250px;
-}
+ }
